--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,14 @@ authors = ["chenjjiaa"]
 
 [workspace]
 resolver = "3"
-members = ["crates/cmd"]
+members = [
+    "crates/gateway",
+    "crates/matching",
+    "crates/settlement",
+    "crates/sdk",
+]
 
 [workspace.dependencies]
+serde = { version = "1", features = ["derive"] }
+thiserror = "1"
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
