--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ members = [
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tonic = "0.12"
+prost = "0.13"
+prost-types = "0.13"
+config = "0.14"
+envy = "0.4"
