--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -11,4 +11,10 @@ serde_json = "1"
 thiserror = { workspace = true }
 hex = "0.4"
 uuid = { version = "1", features = ["v4"] }
+ed25519-dalek = { version = "2", features = ["rand_core"] }
+k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
+sha2 = "0.10"
+rand = "0.8"
+reqwest = { version = "0.12", features = ["json"] }
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 
