--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,35 @@ members = [
 ]
 
 [workspace.dependencies]
-serde = { version = "1", features = ["derive"] }
-thiserror = "1"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-tonic = "0.12"
-prost = "0.13"
-prost-types = "0.13"
-config = "0.14"
-envy = "0.4"
+# Error handling
+anyhow = "^1"
+thiserror = "^1"
+
+# Serialization
+serde = { version = "^1", features = ["derive"] }
+serde_json = "^1"
+
+# Async runtime
+tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
+
+# gRPC
+tonic = "^0.12"
+prost = "^0.13"
+prost-types = "^0.13"
+tonic-build = { version = "^0.12", features = ["prost"] }
+
+# Logging
+tracing = "^0.1"
+tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
+
+# Utilities
+uuid = { version = "^1", features = ["v4"] }
+hex = "^0.4"
+config = "^0.14"
+envy = "^0.4"
+dashmap = "^6"
+
+# Cryptography (shared between gateway and sdk)
+ed25519-dalek = { version = "^2", features = ["rand_core"] }
+k256 = { version = "^0.13", features = ["ecdsa", "sha256"] }
+sha2 = "^0.10"
