--- a/crates/matching/Cargo.toml
+++ b/crates/matching/Cargo.toml
@@ -14,22 +14,23 @@ name = "anvil-matching"
 path = "src/main.rs"
 
 [build-dependencies]
-tonic-build = { version = "0.12", features = ["prost"] }
+tonic-build = { workspace = true }
+anyhow = { workspace = true }
 
 [dependencies]
 anvil-sdk = { path = "../sdk" }
-serde = { workspace = true, features = ["derive"] }
+anvil-settlement = { path = "../settlement" }
+anyhow = { workspace = true }
+serde = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
-uuid = { version = "1", features = ["v4"] }
+uuid = { workspace = true }
 tonic = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tokio-stream = "0.1"
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+tokio-stream = "^0.1"
 config = { workspace = true }
-dashmap = "6"
-crossbeam = "0.8"
-anvil-settlement = { path = "../settlement" }
-
+dashmap = { workspace = true }
+crossbeam = "^0.8"
