--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -6,15 +6,16 @@ license.workspace = true
 authors.workspace = true
 
 [dependencies]
-serde = { workspace = true, features = ["derive"] }
-serde_json = "1"
+anyhow = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
 thiserror = { workspace = true }
-hex = "0.4"
-uuid = { version = "1", features = ["v4"] }
-ed25519-dalek = { version = "2", features = ["rand_core"] }
-k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
-sha2 = "0.10"
-rand = "0.8"
-reqwest = { version = "0.12", features = ["json"] }
+hex = { workspace = true }
+uuid = { workspace = true }
+ed25519-dalek = { workspace = true }
+k256 = { workspace = true }
+sha2 = { workspace = true }
+rand = "^0.8"
+reqwest = { version = "^0.12", features = ["json"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 
