chore: update static resources

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 version = "0.1.0"
 edition = "2024"
 license = "Apache-2.0"
-authors = ["chenjjiaa"]
+authors = ["itscheems"]
 
 [workspace]
 resolver = "3"
