--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,11 @@ tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
 
 # gRPC
 tonic = "^0.14"
-prost = "^0.13"
-prost-types = "^0.13"
-tonic-build = { version = "^0.12", features = ["prost"] }
+prost = "^0.14"
+prost-types = "^0.14"
+tonic-build = { version = "^0.14" }
+tonic-prost-build = { version = "^0.14" }
+tonic-prost = { version = "^0.14" }
 
 # Logging
 tracing = "^0.1"
