--- a/crates/matching/Cargo.toml
+++ b/crates/matching/Cargo.toml
@@ -14,7 +14,7 @@ name = "anvil-matching"
 path = "src/main.rs"
 
 [build-dependencies]
-tonic-build = { workspace = true }
+tonic-prost-build = { workspace = true }
 anyhow = { workspace = true }
 
 [dependencies]
@@ -26,6 +26,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
 uuid = { workspace = true }
 tonic = { workspace = true }
+tonic-prost = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 tracing = { workspace = true }
