--- a/crates/settlement/Cargo.toml
+++ b/crates/settlement/Cargo.toml
@@ -10,7 +10,7 @@ name = "anvil_settlement"
 path = "src/lib.rs"
 
 [build-dependencies]
-tonic-build = { workspace = true }
+tonic-prost-build = { workspace = true }
 anyhow = { workspace = true }
 
 [dependencies]
@@ -22,6 +22,7 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["signal", "rt-multi-thread"] }
 uuid = { workspace = true }
 tonic = { workspace = true }
+tonic-prost = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 tracing = { workspace = true }
