refactor(anvil-gateway): decouple protocol and enforce metadata-only authentication
This commit introduces two major architectural improvements:

1. Protocol Decoupling
   - Introduce AuthContext as a protocol-agnostic container for authentication materials
   - Refactor AuthProvider trait to work with AuthContext instead of protocol-specific types
   - Enable same authentication logic across HTTP, gRPC, and future protocols
   - Gateway adapters construct AuthContext from protocol-specific sources (headers/metadata)

2. Request Parameter Requirements (Protocol Specification)
   - Remove signature field from PlaceOrderRequest (business payload should not contain auth materials)
   - Remove body_signature and body_public_key fields from AuthContext
   - Enforce hard protocol requirement: authentication materials MUST be in request metadata
     * HTTP: X-Public-Key and X-Signature headers
     * gRPC: public-key and signature metadata keys
   - Update SDK place_order_signed to place authentication materials in HTTP headers
   - Update Gateway authentication flow to extract auth materials from metadata only

Breaking Changes:
- PlaceOrderRequest.signature field removed (was in body, now in headers/metadata)
- AuthContext no longer supports body-based authentication (removed fallback paths)
- SDK clients must use place_order_signed with headers, or manually set headers

This change establishes clear protocol boundaries and prevents authentication material
ambiguity by strictly separating business payload from authentication metadata.

--- a/licenserc.toml
+++ b/licenserc.toml
@@ -33,6 +33,7 @@ excludes = [
     ".gitignore",
     ".gitattributes",
     ".editorconfig",
+    ".env.example",
     ".git",
     "LICENSE",
     "Makefile",
