feat(anvil-gateway): add replay protection and enhance auth protocol
- Implement replay cache with moka (bounded memory, TTL-based expiration)
- Add timestamp + nonce validation in authentication flow
- Include timestamp/nonce in signature message for cryptographic binding
- Support explicit signature algorithm hint (X-Signature-Alg header)
- Improve algorithm detection (prefer explicit hint, fallback to public key format)
- Add configurable timeouts and limits (RPC timeout, body size, cache capacity)
- Handle gRPC timeout gracefully (202 ACCEPTED with UNCONFIRMED status)
- Update CORS headers and switch to daily rolling logs

Breaking: Authentication now requires X-Timestamp and X-Nonce headers.
Signature message format includes (timestamp, nonce) after business data.

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,12 @@ GATEWAY_BIND_ADDR=0.0.0.0:8080
 # If not set, uses the number of CPU cores
 # GATEWAY_WORKERS=10
 
+# Replay Cache (bounded memory, automatic TTL)
+# Maximum number of entries in replay cache (default: 1000000)
+# This provides a strict upper bound on memory usage for replay protection.
+# Entries are automatically expired based on GATEWAY_NONCE_TTL_SECS.
+GATEWAY_REPLAY_CACHE_MAX_CAPACITY=1000000
+
 # =============================================================================
 # Matching Engine Configuration
 # =============================================================================
