--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ config = "^0.15"
 envy = "^0.4"
 dashmap = "^6"
 chrono = "^0.4"
+moka = { version = "^0.12", features = ["sync"] }
 
 # Cryptography (shared between gateway and sdk)
 ed25519-dalek = { version = "^2", features = ["rand_core"] }
