feat(anvil-gateway): add distributed tracing and improve replay protection
This commit introduces OpenTelemetry-based distributed tracing and
refactors replay protection to support retryable failures.

Major changes:

Distributed Tracing (OpenTelemetry):
- Add OpenTelemetry integration with W3C Trace Context propagation
- Implement trace context extraction from HTTP headers (traceparent, tracestate)
- Support legacy X-Trace-Id header for backward compatibility
- Propagate trace context to matching engine via gRPC metadata
- Add RequestContext for request-scoped tracing and correlation
- Integrate tracing-opentelemetry layer into logging subsystem

Replay Protection Refactor:
- Replace check_replay() with begin_replay() returning ReplayGuard
- Add support for retryable failures with single retry allowance
- Implement ReplayState machine (InFlight, RetryableReady, Terminal)
- Track replay outcomes to distinguish retryable vs terminal failures

Dispatcher Improvements:
- Add bounded dispatch queue with configurable capacity and timeout
- Implement worker pool pattern for async order submission
- Add DispatchTimings to track queue wait and RPC latency
- Improve error handling with granular error types:
  * GatewayOverloaded, QueueTimeout, MatchingOverloaded
  * MatchingRejected, MatchingInternal, InvalidResponse
- Propagate RequestContext through dispatch pipeline

Error Handling:
- Refactor GatewayError to include request_id for correlation
- Add retryability and unconfirmed flags to error responses
- Map dispatch errors to appropriate HTTP status codes
- Distinguish retryable vs non-retryable failures

Configuration:
- Add GatewayRuntimeConfig for runtime configuration management
- Add dispatch queue capacity and timeout configuration
- Centralize configuration loading from environment variables

Matching Service:
- Add OpenTelemetry tracing support
- Extract trace context from gRPC metadata
- Add SubmitDisposition enum to proto for better error classification
- Impro

--- a/crates/gateway/Cargo.toml
+++ b/crates/gateway/Cargo.toml
@@ -23,6 +23,7 @@ uuid = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
+tracing-opentelemetry = "^0.22"
 num_cpus = "^1"
 tonic = { workspace = true }
 tonic-prost = { workspace = true }
@@ -38,4 +39,7 @@ hex = { workspace = true }
 governor = "^0.10"
 dashmap = { workspace = true }
 moka = { workspace = true }
+opentelemetry = { version = "^0.21", features = ["trace"] }
+opentelemetry_sdk = { version = "^0.21", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "^0.14", features = ["trace", "grpc-tonic"] }
 lazy_static = "^1"
