--- a/crates/matching/Cargo.toml
+++ b/crates/matching/Cargo.toml
@@ -31,6 +31,9 @@ prost = { workspace = true }
 prost-types = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tracing-opentelemetry = "^0.22"
+opentelemetry = { version = "^0.21", features = ["trace"] }
+opentelemetry_sdk = { version = "^0.21", features = ["trace"] }
 tokio-stream = "^0.1"
 config = { workspace = true }
 dashmap = { workspace = true }
