refactor(anvil-matching): migrate to single-threaded event-driven architecture
This commit introduces a complete architectural overhaul of the matching
engine, transitioning from a multi-threaded DashMap-based implementation
to a single-threaded, event-driven design with proper crash recovery
and event sourcing capabilities.

Key architectural changes:
- Single-threaded matching loop: All matching logic now runs in a
  dedicated thread, ensuring deterministic execution and eliminating
  race conditions
- Event sourcing: All state changes produce events that are persisted
  for replay and recovery
- Separation of concerns: RPC layer (multi-threaded) handles validation
  and idempotency, while matching loop (single-threaded) performs
  actual matching

New components:
- engine/mod.rs: Core matching engine with single-threaded event loop
- engine/state.rs: Matching engine state management
- journal/: Order journal for idempotency checking (MemoryOrderJournal)
- queue/: MPSC ingress queue connecting RPC layer to matching loop
- event/: Event buffer, storage, and writer for event persistence
- snapshot/: Snapshot system for crash recovery
- recovery.rs: Recovery coordinator for crash recovery workflows

Configuration enhancements:
- Added ingress_queue_size, event_buffer_size, event_batch_size
- Added event_batch_timeout_ms, snapshot_interval_secs
- Added max_snapshots_to_keep and storage path configurations
- Added verbose_logging flag

Type system improvements:
- Introduced OrderCommand type for validated incoming orders
- Added From<OrderCommand> for Order conversion
- Enhanced type documentation and clarity

Backward compatibility:
- Legacy Matcher marked as deprecated but retained for compatibility
- Old implementation preserved in matcher.rs with deprecation warnings

Testing:
- Added integration tests for matching correctness and idempotency
- Comprehensive unit tests for all new components

Dependencies:
- Added serde_json for event serialization

This refactorin

--- a/crates/matching/Cargo.toml
+++ b/crates/matching/Cargo.toml
@@ -38,3 +38,4 @@ tokio-stream = "^0.1"
 config = { workspace = true }
 dashmap = { workspace = true }
 crossbeam = "^0.8"
+serde_json.workspace = true
