feat(anvil-matching): add structured logging and OpenTelemetry tracing support
This commit introduces comprehensive logging and observability improvements:

- Add file-based logging with daily rotation (logs/matching/*.log)
- Add optional console output via LOG_TO_CONSOLE environment variable
- Integrate OpenTelemetry tracing with OTLP export support
- Add structured logging with target-based categorization (engine, event_writer, server, snapshotter)
- Add performance metrics (latency, batch sizes) to critical operations
- Add detailed request tracing in gRPC server with span context propagation

New dependencies:
- tracing-appender: for file-based log rotation
- opentelemetry-otlp: for OTLP trace export
- dotenv: for environment variable management

Configuration:
- RUST_LOG: log level filter (default: info)
- LOG_DIR: log root directory (default: {project_root}/logs)
- LOG_TO_CONSOLE: enable console output (default: false)
- OTEL_EXPORTER_OTLP_ENDPOINT: OTLP endpoint for trace export (optional)

All log statements now use structured format with target and field attributes
for better observability and filtering.

--- a/crates/matching/Cargo.toml
+++ b/crates/matching/Cargo.toml
@@ -31,11 +31,14 @@ prost = { workspace = true }
 prost-types = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
+tracing-appender = { workspace = true }
 tracing-opentelemetry = "^0.32"
 opentelemetry = { version = "^0.31", features = ["trace"] }
 opentelemetry_sdk = { version = "^0.31", features = ["trace"] }
+opentelemetry-otlp = { version = "^0.31", features = ["trace", "grpc-tonic"] }
 tokio-stream = "^0.1"
 config = { workspace = true }
 dashmap = { workspace = true }
 crossbeam = "^0.8"
 serde_json.workspace = true
+dotenv = "^0.15"
