--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -105,7 +105,6 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
-          ref: main
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -117,26 +116,60 @@ jobs:
       - name: Install git-cliff
         run: cargo install git-cliff --force
 
+      - name: Ensure default branch
+        run: |
+          DEFAULT_BRANCH=$(git remote show origin | grep "HEAD branch" | awk '{print $NF}')
+          echo "Default branch: $DEFAULT_BRANCH"
+
+          git fetch origin "$DEFAULT_BRANCH"
+          git checkout "$DEFAULT_BRANCH"
+          git branch --set-upstream-to=origin/"$DEFAULT_BRANCH"
+
+      - name: Determine tag name
+        id: tag
+        run: |
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            TAG_NAME="${{ github.event.inputs.tag_name }}"
+          else
+            TAG_NAME="${{ github.ref_name }}"
+          fi
+          echo "tag_name=${TAG_NAME}" >> $GITHUB_OUTPUT
+          echo "Tag name: ${TAG_NAME}"
+
       - name: Generate release notes for current tag
         env:
+          GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          CURRENT_TAG="${GITHUB_REF_NAME}"
+          CURRENT_TAG="${{ steps.tag.outputs.tag_name }}"
           PREV_TAG=$(git tag --sort=-creatordate | grep -v "^${CURRENT_TAG}$" | head -n 1)
 
-          echo "Previous tag: $PREV_TAG"
-          echo "Current tag: $CURRENT_TAG"
+          echo "Previous tag: ${PREV_TAG}"
+          echo "Current tag:  ${CURRENT_TAG}"
 
           if [ -z "$PREV_TAG" ]; then
-            git-cliff -c cliff.toml --tag "$CURRENT_TAG" -o RELEASE_NOTES.md
+            echo "No previous tag found, generating first release notes"
+            git-cliff \
+              -c cliff.toml \
+              --tag "$CURRENT_TAG" \
+              --github-repo "$GITHUB_REPOSITORY" \
+              -o RELEASE_NOTES.md \
+              --verbose
           else
-            git-cliff -c cliff.toml --latest -o RELEASE_NOTES.md
+            echo "Generating release notes for range ${PREV_TAG}..${CURRENT_TAG}"
+            git-cliff \
+              -c cliff.toml \
+              "${PREV_TAG}..${CURRENT_TAG}" \
+              --tag "$CURRENT_TAG" \
+              --github-repo "$GITHUB_REPOSITORY" \
+              -o RELEASE_NOTES.md \
+              --verbose
           fi
 
       - name: Create or update GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
-          name: ${{ github.ref_name }}
+          tag_name: ${{ steps.tag.outputs.tag_name }}
+          name: ${{ steps.tag.outputs.tag_name }}
           body_path: RELEASE_NOTES.md
-          # prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') }}
+          # prerelease: ${{ contains(steps.tag.outputs.tag_name, 'alpha') || contains(steps.tag.outputs.tag_name, 'beta') }}
